--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ footer {
     bottom: 0;
 }
 
-i {
+footer i {
     margin-bottom: 0.5rem;
 }
 
@@ -63,6 +63,10 @@ i {
 
 .txt_lt {
     font-size: 12px;
+}
+
+.z_index {
+    z-index: 10;
 }
 
 .clearfix {
